--- a/index.html
+++ b/index.html
@@ -104,9 +104,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-container">
                <h5 class="w3-opacity"><b><a href="https://www.coventrydirect.com/" target="_blank">(Coventry)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Associate Salesforce Administrator in Fort Washington: Being laid off during the COVID pandemic motivated me to continue building technical skill. I earned my Salesforce
-              201 certification and found an admin role at Coventry Resources LLC. The Role has focused heavily on Lightning flow creation and testing.
-             
+          <p>Associate Salesforce Administrator in Fort Washington: Finding work during the COVID pandemic required me to continue building technical skill. I earned my Salesforce
+              201 certification and landed an admin/developer role at Coventry Resources LLC. This role demanded that I complete routine Salesforce duties, like adding and freezing users, as well
+              as more advanced duties, like developing new automation (process builders, lightning flows, custom lightning components)
+              and rigerously testing that automation before releasing it to our Test Sandbox for UAT. Experience and highlights listed below.
+              <br>
+              <b>Testing experience</b>
+                   <ul>
+                       <li><b>User Acceptance Testing (UAT):</b> Both released updates to users and reviewed results, as well as tested code from outside developers and reported on integration compatability.</li>
+                       <li><b>Alpha Testing:</b> Rigerously tested software that I designed within my Development Sandbox to expose all bugs, design issues, business concerns, etc.</li>
+                       <li><b>Monkey Testing/Data Quality Testing:</b> Can the system branch, or automation be crashed when input fields recieve bad or nonsensical data.</li>
+                       <li><b>Unit Testing:</b> Tested updates in a clean environemtn, where I could verify the new process worked without worrying about compatability with other automation/system constraints.</li>
+                       <li><b>Regression Testing: </b> Tested to see what existing automation and processes were affected/disrupted by the updates after unit testing.</li>
+                       <li><b>Automated Testing:</b> Used Postman to run automated tests on Salesforce automation.</li>
+                   </ul>
+              <br>
+                Key Duties
+                  <ul>
+                      <li>Salesforce Chat:<b/> Developed, tested, and released Salesforce Chat to the company's Direct to Consumer (DTC) business unit. This sunsetted the SnapEngage tool that ran outside of the Salesforce environment and brought new, consolidated, and actionable data to our business users.</li>
+                      <li>Outlook Integration:</b>Rigerously tested the change set developed by external specialists, which was enabling our users to log emails from Outlook and Microsoft 360  as tasks in Salesforce.</li>
+                      <li>Added users and editted existing users to either limit or expand access/visibility in Salesforce.</li>
+                      <li>Created Salesforce Reports and Dashboards for Users upo request.</li>
+                      <li>Kept my JIRA ticket dashboard clean and up to date to ensure work kept moving.</li>
+                  </ul>
             </p>
           <hr>
         
