--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               as more advanced duties, like developing new automation (process builders, lightning flows, custom lightning components)
               and rigerously testing that automation before releasing it to our Test Sandbox for UAT. Experience and highlights listed below.
               <br>
+              <br>
               <b>Testing experience</b>
                    <ul>
                        <li><b>User Acceptance Testing (UAT):</b> Both released updates to users and reviewed results, as well as tested code from outside developers and reported on integration compatability.</li>
@@ -119,9 +120,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                        <li><b>Automated Testing:</b> Used Postman to run automated tests on Salesforce automation.</li>
                    </ul>
               <br>
-                Key Duties
+                   <b>Key Duties</b>
                   <ul>
-                      <li>Salesforce Chat:<b/> Developed, tested, and released Salesforce Chat to the company's Direct to Consumer (DTC) business unit. This sunsetted the SnapEngage tool that ran outside of the Salesforce environment and brought new, consolidated, and actionable data to our business users.</li>
+                      <li><b>Salesforce Chat:<b/> Developed, tested, and released Salesforce Chat to the company's Direct to Consumer (DTC) business unit. This sunsetted the SnapEngage tool that ran outside of the Salesforce environment and brought new, consolidated, and actionable data to our business users.</li>
                       <li>Outlook Integration:</b>Rigerously tested the change set developed by external specialists, which was enabling our users to log emails from Outlook and Microsoft 360  as tasks in Salesforce.</li>
                       <li>Added users and editted existing users to either limit or expand access/visibility in Salesforce.</li>
                       <li>Created Salesforce Reports and Dashboards for Users upo request.</li>
