--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                    <b>Key Duties</b>
                   <ul>
                       <li><b>Salesforce Chat:</b> Developed, tested, and released Salesforce Chat to the company's Direct to Consumer (DTC) business unit. This sunsetted the SnapEngage tool that ran outside of the Salesforce environment and brought new, consolidated, and actionable data to our business users.</li>
-                      <li>Outlook Integration:</b>Rigerously tested the change set developed by external specialists, which was enabling our users to log emails from Outlook and Microsoft 360  as tasks in Salesforce.</li>
-                      <li>Added users and editted existing users to either limit or expand access/visibility in Salesforce.</li>
-                      <li>Created Salesforce Reports and Dashboards for Users upo request.</li>
-                      <li>Kept my JIRA ticket dashboard clean and up to date to ensure work kept moving.</li>
+                      <li><b>Outlook Integration:</b> Rigerously tested the change set developed by external specialists, which was enabling our users to log emails from Outlook and Microsoft 360  as tasks in Salesforce.</li>
+                      <li><b>User Access:</b> Added users and editted existing users to either limit or expand access/visibility in Salesforce.</li>
+                      <li><b>Reporting:</b> Created Salesforce Reports and Dashboards for Users upo request.</li>
+                      <li><b>Ticketing Platform:</b> Kept my JIRA ticket dashboard clean and up to date to ensure work kept moving.</li>
                   </ul>
             </p>
           <hr>
