--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-container">
                <h5 class="w3-opacity"><b><a href="https://www.coventrydirect.com/" target="_blank">(Coventry)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Associate Salesforce Administrator in Fort Washington: Finding work during the COVID pandemic required me to continue building technical skill. I earned my Salesforce
+          <p>Associate Salesforce Administrator in Fort Washington: Finding work during the COVID pandemic required me to continue building technical skills. I earned my Salesforce
               201 certification and landed an admin/developer role at Coventry Resources LLC. This role demanded that I complete routine Salesforce duties, like adding and freezing users, as well
               as more advanced duties, like developing new automation (process builders, lightning flows, custom lightning components)
               and rigerously testing that automation before releasing it to our Test Sandbox for UAT. Experience and highlights listed below.
@@ -113,7 +113,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <b>Testing experience</b>
                    <ul>
                        <li><b>User Acceptance Testing (UAT):</b> Both released updates to users and reviewed results, as well as tested code from outside developers and reported on integration compatability.</li>
-                       <li><b>Alpha Testing:</b> Rigerously tested software that I designed within my Development Sandbox to expose all bugs, design issues, business concerns, etc.</li>
+                       <li><b>Alpha Testing:</b> Rigorously tested software that I designed within my Development Sandbox to expose all bugs, design issues, business concerns, etc.</li>
                        <li><b>Monkey Testing/Data Quality Testing:</b> Can the system branch, or automation be crashed when input fields recieve bad or nonsensical data.</li>
                        <li><b>Unit Testing:</b> Tested updates in a clean environemtn, where I could verify the new process worked without worrying about compatability with other automation/system constraints.</li>
                        <li><b>Regression Testing: </b> Tested to see what existing automation and processes were affected/disrupted by the updates after unit testing.</li>
