--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Associate Salesforce Administrator in Fort Washington: Finding work during the COVID pandemic required me to continue building technical skills. I earned my Salesforce
               201 certification and landed an admin/developer role at Coventry Resources LLC. This role demanded that I complete routine Salesforce duties, like adding and freezing users, as well
-              as more advanced duties, like developing new automation (process builders, lightning flows, custom lightning components)
-              and rigerously testing that automation before releasing it to our Test Sandbox for UAT. Experience and highlights listed below.
+              as more advanced responsibilities, like developing sales process automation (process builders, lightning flows, custom lightning components)
+              and rigerously testing that automation before releasing it to our Test Sandbox for UAT, and ultimately deploying to production. Experience and highlights listed below.
               <br>
               <br>
               <b>Testing experience</b>
