--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
         	 <h5 class="w3-large"><b>Resume & Portfolio</b></h5>
-          <p><i class="fa fa-suitcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Senior Enterprise Analyst</p>
+          <p><i class="fa fa-suitcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Senior Customer Strategy Manager</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Philadelphia, PA</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jhludwig94@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(484) 429-1584</p>
-          <p><i class="fa fa-file fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="Resume_Ludwig_Resume_Spring (1).pdf" target=_"blank">View My Resume</a></p>
+          <p><i class="fa fa-file fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="Resume_Ludwig_Resume_Spring_2023 (1).pdf" target=_"blank">View My Resume</a></p>
           <p><i class="fa fa-link fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://trailblazer.me/id/jhludwig94">Trailhead Profile</a></p>
           <hr>
 
