--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
+              <h5 class="w3-opacity"><b><a href="https://www.quartile.com/"target="_blank">(Sidecar(Acquired by Quartile))<a/></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2021 - June 2023</span></h6>
+          <p>Senior Customer Strategy Manager in Philadelphia: I worked within the Enterprise client division of our customer strategy team, dealing with the highest
+              billed and most demanding clients within our portfolio. My 2.5 years of agency experience was drawn on to advise clients on strategy across the
+              SEM, Display, Meta, Amazon, and Walmart PPC channels. I managed ad spend upwards of $3M monthly on behalf of my clients. I understand that every client relationship
+               is different, and curate my communication and presentation style to accomodate each individual client. Beyond routine relationship building, my role relied
+               heavily on my ability to report on complex performance marketing KPIs, and extract stories from the data to craft client-specific strategy.
+         
+            </p>
+          <hr>
                <h5 class="w3-opacity"><b><a href="https://www.coventrydirect.com/" target="_blank">(Coventry)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Associate Salesforce Administrator in Fort Washington: Finding work during the COVID pandemic required me to continue building technical skills. I earned my Salesforce
@@ -134,7 +144,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               
           <h5 class="w3-opacity"><b><a href="https://tinuiti.com/"target="_blank">(Tinuiti)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - April 2020</span></h6>
-          <p>Shopping & Feed Coordinator Trainee at Tinuiti in Philadelphia: In 2020 I moved into digital marketing and began a working at Tinuiti.
+          <p>Shopping & Feed Coordinator at Tinuiti in Philadelphia: In 2020 I moved into digital marketing and began a working at Tinuiti.
               I developed expertise in the following UIs: Search Ads 360 (SA360), Google Shopping Ads, Google Merchant Center Google Analytics, Google Adwords Editor, Bing Ads, Kenshoo, Feedonomics, Wrike, and Supermetrics.
               Using these tools, I supported accounts with monthly spend upwards of $100,000. I managed daily search term bid adjustments/optimizations 
               to eliminate poor performing search queries and grow ROAS on high performers. I pulled weekly SQRs to eliminate problematic search trends from campaigns,
