--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
               <h5 class="w3-opacity"><b><a href="https://www.quartile.com/"target="_blank">(Sidecar(Acquired by Quartile))<a/></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2021 - June 2023</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2021 - <span class="w3-tag w3-teal w3-round">June 2023</span></h6>
           <p>Senior Customer Strategy Manager in Philadelphia: I worked within the Enterprise client division of our customer strategy team, dealing with the highest
               billed and most demanding clients within our portfolio. My 2.5 years of agency experience was drawn on to advise clients on strategy across the
               SEM, Display, Meta, Amazon, and Walmart PPC channels. I managed ad spend upwards of $3M monthly on behalf of my clients. I understand that every client relationship
@@ -113,7 +113,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </p>
           <hr>
                <h5 class="w3-opacity"><b><a href="https://www.coventrydirect.com/" target="_blank">(Coventry)<a/></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2020 - June 2021</span></h6>
           <p>Associate Salesforce Administrator in Fort Washington: Finding work during the COVID pandemic required me to continue building technical skills. I earned my Salesforce
               201 certification and landed an admin/developer role at Coventry Resources LLC. This role demanded that I complete routine Salesforce duties, like adding and freezing users, as well
               as more advanced responsibilities, like developing sales process automation (process builders, lightning flows, custom lightning components)
