--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>A Little About Me</h2>
           <div class="w3-container">
-              <h5 class="w3-opacity"><b><a href="https://www.quartile.com/"target="_blank">(Sidecar(Acquired by Quartile))<a/></b></h5>
+              <h5 class="w3-opacity"><b><a href="https://www.quartile.com/"target="_blank">(Sidecar - Acquired by Quartile)<a/></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2021 - <span class="w3-tag w3-teal w3-round">June 2023</span></h6>
           <p>Senior Customer Strategy Manager in Philadelphia: I worked within the Enterprise client division of our customer strategy team, dealing with the highest
               billed and most demanding clients within our portfolio. My 2.5 years of agency experience was drawn on to advise clients on strategy across the
